--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,17 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+*.xlsx
+*.xls
+
 # Windows Installer files
 *.cab
 *.msi
 *.msm
 *.msp
+
+# FOLDERS
+_archive/
 
 # Windows shortcuts
 *.lnk
